New status/queue and reorg services.status
