# src/catch_apis/api/openapi.yaml
@@ -622,7 +622,6 @@ paths:
                     source:
                       type: string
                       description: Observational data source key.
-                      nullable: true
                     source_name:
                       type: string
                       description: Observational data source name.
@@ -635,8 +634,44 @@ paths:
                     start_date:
                       type: string
                       description: Earliest image start time, UTC.
-                      nullable: true
                     stop_date:
                       type: string
                       description: Latest image stop time, UTC.
-                      nullable: true
+  /status/queue:
+    get:
+      tags:
+        - CATCH Status
+      summary: Show the CATCH job queue
+      operationId: catch_apis.api.status.queue
+      responses:
+        "200":
+          description: Success.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  description: Job queue summary.
+                  properties:
+                    prefix:
+                      type: string
+                      description: Job ID prefix.
+                    position:
+                      type: integer
+                      description: Queue position.
+                    enqueued_at:
+                      type: string
+                      description: Time when the job was enqueued, UTC.
+                    status:
+                      type: string
+                      description: Job status.
+                      enum:
+                        - queued
+                        - finished
+                        - failed
+                        - started
+                        - deferred
+                        - scheduled
+                        - stopped
+                        - cancelled
